reposition top-right image and fix line spacing for body

--- a/_cta.scss
+++ b/_cta.scss
@@ -118,6 +118,9 @@ article {
       }
     }
 
+    &--content {
+    }
+
     &--price {
       .big {
         font-size: 4rem;
