--- a/_header.scss
+++ b/_header.scss
@@ -36,7 +36,7 @@
 
     @media screen and (max-width: $breakpoint-tablet) {
       margin-top: 28px;
-      max-width: 500px;
+      max-width: 510px;
     }
 
     @media screen and (max-width: $breakpoint-mobile) {
