--- a/_images.scss
+++ b/_images.scss
@@ -6,7 +6,7 @@
 
 .top-right {
   right: 0;
-  top: 0;
+  top: -2rem;
   width: 312px;
 
   @media screen and (max-width: $breakpoint-tablet) {
