--- a/_variables.scss
+++ b/_variables.scss
@@ -28,14 +28,14 @@ $spacing-h2-all: 0px;
 
 //body
 $font-body-desktop: 1.25rem;
-$line-body-desktop: 2.125;
+$line-body-desktop: 2.125rem;
 $spacing-body-all: 0px;
 
 $font-body-tablet: 1.125rem;
 $line-body-tablet: 1.75rem;
 
 $font-body-mobile: 1rem;
-$line-body-mobile: 1.625rem;
+$line-body-mobile: 1.75rem;
 
 //footer
 $font-footer-all: 1rem;
