--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@
 @media screen and (max-width: 1370px) {
   .header__subtitle {
     margin-top: 28px;
-    max-width: 500px;
+    max-width: 510px;
   }
 }
 @media screen and (max-width: 800px) {
@@ -253,7 +253,7 @@ article {
 
 .top-right {
   right: 0;
-  top: 0;
+  top: -2rem;
   width: 312px;
 }
 @media screen and (max-width: 1370px) {
@@ -383,7 +383,7 @@ a {
 
 p {
   font-size: 1.25rem;
-  line-height: 2.125;
+  line-height: 2.125rem;
   letter-spacing: 0px;
 }
 @media screen and (max-width: 1370px) {
@@ -395,7 +395,7 @@ p {
 @media screen and (max-width: 800px) {
   p {
     font-size: 1rem;
-    line-height: 1.625rem;
+    line-height: 1.75rem;
   }
 }
 
